<resources>
    <string name="app_name">Challenge app</string>
    <string name="profile_name_text_view">Oladotun Babatunde Daniel</string>
    <string name="profile_android_text_view">Track: Android</string>
    <string name="profile_country_text_view">Country: Nigeria</string>
    <string name="profile_email_text_view">Email: babatundeola66@gamil.com</string>
    <string name="profile_phone_text_view">Phone Number: 2348177315349</string>
    <string name="profile_slack_text_view">Slack Username: @babatunde</string>
    <string name="activity_title_text_view">Welcome to ALC 4.0</string>
    <string name="about_button">About ALC</string>
    <string name="profile_button">My profile</string>
</resources>
