<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/my_profile_pic"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/profile_name_text_view"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/viewColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_android_text_view"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_country_text_view"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_email_text_view"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_phone_text_view"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_slack_text_view"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>


</LinearLayout>